src/test/ui/type-alias-impl-trait/issue-63279.stderr
error[E0308]: mismatched types
  --> $DIR/issue-63279.rs:8:5
   |
LL | type Closure = impl FnOnce();
   |                ------------- the found opaque type
...
LL |     || -> Closure { || () }
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected closure, found a different closure
   |
   = note: expected type `[closure@$DIR/issue-63279.rs:8:21: 8:26]`
           found closure `[closure@$DIR/issue-63279.rs:8:5: 8:28]`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
